# IMAGE-PUBLISH

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  capture.py
certs/: device.crt.pem  device.key.pem
k8s/: cam01-deployment.yaml  cam02-deployment.yaml  cam03-deployment.yaml  cam04-deployment.yaml
src/: image_publisher.rs  main.rs
