[package]
name    = "mqtt-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc    = { version = "0.24", features = ["use-rustls"] }
tokio      = { version = "1",    features = ["full"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
rand       = "0.8"
chrono     = { version = "0.4",  features = ["serde"] }